[metadata]
name = rtstest
version = file: src/rtstest/version.txt
description = Testing ray tune with slurm batch submission for the Princeton tigergpu cluster
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klieret/ray-tune-slurm-test
author = Kilian Lieret
author_email = kilian.lieret@posteo.de
maintainer = Kilian Lieret
maintainer_email = kilian.lieret@posteo.de
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker =   https://github.com/klieret/ray-tune-slurm-test/issues
    Documentation = https://rtstest.readthedocs.io/
    Source Code =   https://github.com/klieret/ray-tune-slurm-test
python_requires = >=3.7

[options]
packages = find:
install_requires =
    click
    colorlog
    hyperopt
    mlflow
    numpy
    ray
    tensorboardX
    torch
    torchvision
    wandb
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-coverage
